# ERender

./: CMakeLists.txt  README.md  main.cpp
CMakeModules/: FindGLEW.cmake  FindGLFW.cmake
src/accelerators/: Kmeans.cpp  Kmeans.h  KmeansBvh.cpp  KmeansBvh.h  PeakDensity.cpp  PeakDensity.h  bvh.cpp  bvh.h
src/camera/: camera.cpp  camera.h  camera_info.h
src/core/: aggregate.h  bbox.cpp  bbox.h  color.cpp  color.h  pathtracer.cpp  pathtracer.h  primitive.h  ray.h
src/glm/: glm.hpp
src/mesh/: mesh.cpp  mesh.h  polymesh.cpp  polymesh.h
src/obj_parser/: obj_parser.cpp  obj_parser.h
src/render/: application.cpp  application.h  render.h
src/shape/: triangle.cpp  triangle.h
src/utilis/: image.cpp  image.h  misc.h  timer.h
src/viewer/: viewer.cpp  viewer.h
